bin/tests/snapshots/embedded_code__1c278b1af128ef864dcd2f8b4f34a740_fix.snap
---
source: bin/tests/embedded_code.rs
---
{ scripts.x.exec = ''
  jq -n '$a + $b' --arg a 1 --argjson b 2
  jq "$filter" x
  jq '.a.${attr}' x
''; }
---
