bin/tests/snapshots/embedded_code__1c278b1af128ef864dcd2f8b4f34a740_lint_errfmt.snap
---
source: bin/tests/embedded_code.rs
---
{ scripts.x.exec = ''
  jq -n '$a + $b' --arg a 1 --argjson b 2
  jq "$filter" x
  jq '.a.${attr}' x
''; }
---
<temp_file_path>>3:7:W:28:[shellcheck] SC2154: filter is referenced but not assigned.
<temp_file_path>>2:3:W:31:[undeclared_command] `jq` isn't declared
