bin/tests/snapshots/embedded_code__612db01918ee44592d42f4dfbb1798cd_fix.snap
---
source: bin/tests/embedded_code.rs
---
{ scripts.x.exec = ''
  jq '.items[] | .name,' data.json
''; }
---
