bin/tests/snapshots/embedded_code__612db01918ee44592d42f4dfbb1798cd_lint_stderr.snap
---
source: bin/tests/embedded_code.rs
---
{ scripts.x.exec = ''
  jq '.items[] | .name,' data.json
''; }
---
[undeclared_command] Warning: Command in a shell script isn't declared or doesn't exist
   ╭─[ <temp_file_path>:2:3 ]
   │
 2 │   jq '.items[] | .name,' data.json
   │   ─┬  
   │    ╰── jq isn't declared
───╯
[embedded_code] Warning: Error in a jq, awk or python program inside a shell script
   ╭─[ <temp_file_path>:2:7 ]
   │
 2 │   jq '.items[] | .name,' data.json
   │       ────────┬────────  
   │               ╰────────── jq: syntax error, unexpected end of the program
───╯
