bin/tests/snapshots/embedded_code__692e0130e5ab578ff42c5a08d6969b2d_fix.snap
---
source: bin/tests/embedded_code.rs
---
{ scripts.x.exec = ''
  n=$(awk -F: '{print $1' /etc/passwd)
''; }
---
